--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -14,9 +14,23 @@
     padding: 1em;  
     border-radius: 10px; 
     margin-top: 8em;
-    box-shadow: 6px 6px 6px grey;
+    margin-bottom:230px;
+    box-shadow: 6px 6px 6px white;
    
    
 }
-
+.login-body{
+    background-image:url('../../images/giphy.gif');
+    background-size: cover;
+}
+.loginText{
+    color:white;
+    text-shadow: 3px 3px 3px black;
+    text-align: center;
+    font-size: 43px;
+}
+.labels{
+    color:white;
+    text-shadow: 3px 3px 3px black;
+}
 
